<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esp.bookmarket.ui.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background"
        android:scaleType="fitXY"
        android:alpha="0.6"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.14"
        android:src="@color/black"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/bookmarket"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@id/create_new_user"
        android:paddingHorizontal="40dp">

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_login_edt"
            android:hint="@string/email"
            android:textColorHint="#4c73b4"
            android:textColor="#4c73b4"
            android:textSize="16sp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"/>
        <EditText
            android:id="@+id/register_user_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_login_edt"
            android:hint="@string/username"
            android:textColorHint="#4c73b4"
            android:textColor="#4c73b4"
            android:textSize="16sp"
            android:maxLines="1"
            android:inputType="textNoSuggestions"
            android:paddingHorizontal="10dp"/>

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/bg_login_edt"
            android:hint="@string/password"
            android:textColorHint="#4c73b4"
            android:textColor="#4c73b4"
            android:textSize="16sp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:paddingHorizontal="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_login_btn"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="Register"
            android:textColor="#27487e"
            android:onClick="register"
            android:textAllCaps="false"/>



    </LinearLayout>

    <TextView
        android:id="@+id/create_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have account?"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="#27487e"/>


</RelativeLayout>
